<resources>
    <string name="app_name">Dreamer</string>
    <string name="add_toolbar_title">New dream</string>
    <string name="diary_title">Diary</string>
    <string name="stats_title">Statistics</string>
    <string name="add_title">Add new dream</string>
    <string name="music_title">Chill Sounds</string>
    <string name="settings_title">Settings</string>
    <string name="default_date_number">00</string>
    <string name="default_weekday">Me</string>
    <string name="lorem_ipsum">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.
    </string>
    <string name="default_dream_title">Title</string>
    <string name="default_dream_date">24th march</string>
    <string name="dream_description_hint">Dream description</string>
    <string name="dream_title_hint">Dream title</string>
    <string name="insert_dream_tags_hint">Insert dream tags</string>
    <string name="duplicate_tag">Tag already inserted</string>
    <string name="empty_tag">Can\'t insert empty tag</string>
    <string name="insert_t_d">Insert title and description (text or audio)</string>
    <string name="insert_t">Insert title</string>
    <string name="insert_d">Insert description (text or audio)</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="thick_label_seek_bar">Thick</string>
    <string name="thin_label_seek_bar">Thin</string>
    <string name="erase_label">Eraser</string>
    <string name="save_label_palette">Save</string>
    <string name="reset_label_palette">Reset</string>
    <string name="permission_denied">To save a report of a dream the application needs permissions to save files in the memory</string>
    <string name="give_permission_btn_label">Give permission</string>
    <string name="add_drawing_label">Add drawing</string>
    <string name="add_image_label">Add image</string>
    <string name="image_label">Image or drawing</string>
    <string name="toolbar_normal_title">Insert text</string>
    <string name="pick_date_label">Pick date</string>
    <string name="insert_tag_description">insert tag</string>
    <string name="rate_dream_label">Rate dream</string>
    <string name="record_audio_description">Record audio</string>
    <string name="how_to_record_label">Press the red button to start a recording</string>
    <string name="inserted_tags_label">Inserted tags</string>
    <string name="no_recording_label">No recording found for this dream</string>
    <string name="delete_label">Delete?</string>
    <string name="play_recording_label">Play recording</string>
    <string name="select_palette_color_label">Select palette color</string>
    <string name="default_label_audio_player">Audio 1</string>
    <string name="default_rating">5</string>
    <string name="default_tag_label">tag1</string>
    <string name="delete_all_btn_label">Delete all</string>
    <string name="popup_cancel_title">Are you sure?</string>
    <string name="popup_cancel_description">If you go back you are going to loose all your progress</string>
    <string name="negative_action_dialog_label">Discard</string>
    <string name="positive_action_dialog_label">Go back</string>
    <string name="no_tags_label">No tags inserted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_slogan">Write your dreams</string>
    <string name="signin_google">Google</string>
    <string name="signin_facebook">Facebook</string>
    <string name="signin_mail">Email</string>
    <string name="label_signin">Continue with:</string>
    <string name="sign_up">Sign up with email</string>
    <string name="label_signup">Or create a new account:</string>
    <string name="logout">Logout</string>
    <string name="logout_subtitle">Do you want to logout?</string>
    <string name="logout_description">Logout icon</string>
    <string name="profile_description">Profile picture</string>
    <string name="facebook_app_id">655761071785702</string>
    <string name="fb_login_protocol_scheme">fb655761071785702</string>
    <string name="name_sug">Name</string>
    <string name="surname_sug">Surname</string>
    <string name="username_sug">Username</string>
    <string name="email_sug">Email</string>
    <string name="password_sug">Password</string>
    <string name="repeat_password_sug">Repeat password</string>
    <string name="register_label">Register</string>
    <string name="sign_in_label">Sign in</string>
    <string name="enter_credential_label">Enter credentials:</string>
    <string name="sign_up_email_label">Enter your information:</string>
    <string name="InfoLabel">Info</string>
    <string name="edit_info_btn">Edit info</string>
    <string name="profile_info_label">Profile info:</string>
    <string name="following_label">Friends you are following:</string>
    <string name="follow_btn">Follow</string>
    <string name="search_friend_btn">Search friend</string>
    <string name="save_dream_label">Save Dream</string>
    <string name="delete_dream_message">Delete</string>
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="add_btn_label">Add</string>
    <string name="save_btn_label">Save</string>

</resources>
