<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/diary_item"
        android:title="@string/diary_title"
        android:icon="@drawable/ic_book_open"/>
    <item
        android:id="@+id/add_item"
        android:title="@string/add_title"
        android:icon="@drawable/ic_add_circle"/>
    <item
        android:id="@+id/stats_item"
        android:title="@string/stats_title"
        android:icon="@drawable/ic_statistics"/>
    <item
        android:id="@+id/music_item"
        android:title="@string/music_title"
        android:icon="@drawable/ic_music"/>
    <item
        android:id="@+id/settings_item"

        android:title="@string/settings_title"
        android:icon="@drawable/ic_settings"/>
</menu>