<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/start_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_start_tile"
        android:elevation="@dimen/elevation_two"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/background_tile"
        app:layout_constraintEnd_toStartOf="@id/mid_space"
        app:layout_constraintStart_toStartOf="@id/background_tile"
        app:layout_constraintTop_toTopOf="@id/background_tile">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/delete_label"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mid_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/mail"
        android:elevation="@dimen/elevation_two"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/background_tile"
        app:layout_constraintEnd_toStartOf="@id/end_space"
        app:layout_constraintStart_toEndOf="@id/start_space"
        app:layout_constraintTop_toTopOf="@id/background_tile">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/delete_label"
            android:src="@drawable/ic_trash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_dream_message"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_end_tile"
        android:backgroundTint="@color/colorExtra"
        android:elevation="@dimen/elevation_two"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/background_tile"
        app:layout_constraintEnd_toEndOf="@id/background_tile"
        app:layout_constraintStart_toEndOf="@id/mid_space"
        app:layout_constraintTop_toTopOf="@id/background_tile">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/general_margin"
            android:contentDescription="@string/delete_label"
            android:src="@drawable/ic_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <Button
        android:id="@+id/background_tile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:background="@drawable/bg_dreamtile"
        android:clickable="false"
        android:focusable="false"
        android:paddingBottom="@dimen/general_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating_display"
        android:layout_width="@dimen/rating_size"
        android:layout_height="@dimen/rating_size"
        android:text="@string/default_rating"
        android:translationZ="@dimen/elevation_one"
        android:theme="@style/display_rating"
        app:layout_constraintEnd_toEndOf="@id/background_tile"
        app:layout_constraintTop_toTopOf="@id/background_tile" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_small_margin"
        android:text="@string/default_dream_date"
        android:theme="@style/dream_date"
        android:translationZ="@dimen/elevation_one"
        app:layout_constraintStart_toStartOf="@+id/background_tile"
        app:layout_constraintTop_toTopOf="@+id/background_tile" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_small_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:lines="1"
        android:text="@string/default_dream_title"
        android:theme="@style/dream_title"
        android:translationZ="@dimen/elevation_one"
        app:layout_constraintBottom_toTopOf="@+id/description_label"
        app:layout_constraintEnd_toEndOf="@id/background_tile"
        app:layout_constraintStart_toStartOf="@+id/background_tile"
        app:layout_constraintTop_toBottomOf="@+id/date_label" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_small_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:layout_marginBottom="@dimen/general_small_margin"
        android:text="@string/lorem_ipsum"
        android:theme="@style/dream_description"
        android:translationZ="@dimen/elevation_one"
        app:layout_constraintBottom_toTopOf="@id/tag1"
        app:layout_constraintEnd_toEndOf="@+id/background_tile"
        app:layout_constraintStart_toStartOf="@+id/background_tile"
        app:layout_constraintTop_toBottomOf="@+id/title_label" />

    <Button
        android:id="@+id/tag1"
        style="@style/tag_dream_button"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginEnd="@dimen/general_small_margin"
        android:text="@string/default_tag_label"
        app:layout_constraintBottom_toBottomOf="@id/background_tile"
        app:layout_constraintEnd_toStartOf="@id/tag2"
        app:layout_constraintStart_toStartOf="@+id/background_tile" />

    <Button
        android:id="@+id/tag2"
        style="@style/tag_dream_button"
        android:layout_marginStart="@dimen/general_small_margin"
        android:layout_marginEnd="@dimen/general_small_margin"
        android:text="@string/default_tag_label"
        app:layout_constraintBottom_toBottomOf="@id/background_tile"
        app:layout_constraintEnd_toStartOf="@+id/tag3"
        app:layout_constraintStart_toEndOf="@+id/tag1" />

    <Button
        android:id="@+id/tag3"
        style="@style/tag_dream_button"
        android:layout_marginStart="@dimen/general_small_margin"
        android:layout_marginEnd="@dimen/general_margin"
        android:text="@string/default_tag_label"
        app:layout_constraintBottom_toBottomOf="@id/background_tile"
        app:layout_constraintEnd_toEndOf="@id/background_tile"
        app:layout_constraintStart_toEndOf="@+id/tag2" />

</androidx.constraintlayout.widget.ConstraintLayout>


