<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_settings"
            layout="@layout/layout_normal_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            app:layout_constraintTop_toBottomOf="@id/toolbar_settings"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/logout_description"
            android:layout_margin="@dimen/general_margin"/>

        <TextView
            android:id="@+id/logout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintStart_toEndOf="@id/logout_icon"
            app:layout_constraintTop_toTopOf="@id/logout_icon"
            app:layout_constraintBottom_toBottomOf="@id/logout_icon"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_margin="@dimen/general_margin"/>
        <TextView
            android:id="@+id/logout_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_subtitle"
            app:layout_constraintStart_toStartOf="@id/logout_title"
            app:layout_constraintTop_toBottomOf="@id/logout_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>