<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/general_margin"
    android:layout_marginTop="@dimen/general_margin">


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/general_margin"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:clickable="false"
            android:contentDescription="@string/profile_description"
            android:focusable="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/general_margin"
        android:clickable="false"
        android:focusable="false"
        android:gravity="start"
        android:lines="1"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/follow_btn"
        app:layout_constraintStart_toEndOf="@id/layout_profile_image"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/follow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dreamtile"
        android:backgroundTint="@color/colorPrimaryDark"
        android:clickable="false"
        android:drawablePadding="@dimen/general_margin"
        android:focusable="false"
        android:paddingHorizontal="@dimen/general_margin"
        android:text="@string/follow_btn"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


